matching version of postgres to client

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,8 +28,8 @@
       "port": 5432,
       "driver": "PostgreSQL",
       "name": "PostgreSQL Database",
-      "database": "postgres",
-      "username": "postgres",
+      "database": "linkedin",
+      "username": "vscode",
       "password": "postgres"
     }
   ],
